# modern_cpp_image_to_jpeg

./: CMakeLists.txt  Doxyfile.in  LICENSE  TestGit  readme.md
doc/html/: annotated.html  byte__view_8h_source.html  classSocket_1_1HttpHeaderParser-members.html  classSocket_1_1HttpHeaderParser.html  classSocket_1_1HttpSocket-members.html  classSocket_1_1HttpSocket.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  http_8h_source.html  http__header__parser_8h_source.html  image__loader_8h_source.html  index.html  jpeg__constants_8h_source.html  main_8cpp_source.html  namespaceSocket.html  namespaceTooJpeg17.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  stream__utils_8h_source.html  structByteView-members.html  structByteView.html  structImageLoader-members.html  structImageLoader.html  structSocket_1_1HttpParsedResponse-members.html  structSocket_1_1HttpParsedResponse.html  structSocket_1_1Url-members.html  structSocket_1_1Url.html  structTooJpeg17_1_1BitCode-members.html  structTooJpeg17_1_1BitCode.html  structTooJpeg17_1_1BitWriter-members.html  structTooJpeg17_1_1BitWriter.html  structTooJpeg17_1_1BitWriter_1_1BitBuffer-members.html  structTooJpeg17_1_1BitWriter_1_1BitBuffer.html  toojpeg__17_8cpp_source.html  toojpeg__17_8h_source.html  url_8h_source.html
doc/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_9.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  namespaces_0.js  namespaces_1.js  searchdata.js
src/: byte_view.h  http.h  http_header_parser.h  image_loader.h  jpeg_constants.h  main.cpp  stream_utils.h  toojpeg_17.cpp  toojpeg_17.h  url.h
src/benchmark/: main.cpp  toojpeg.cpp  toojpeg.h
tests/: CMakeLists.txt  test_jpeg_out.cpp  test_url.cpp  tests.h  webcrawling_testpage.txt
